corrected responsiveness of about.html, aligned all h1 to center

--- a/css/_defaults.scss
+++ b/css/_defaults.scss
@@ -18,6 +18,7 @@ h1 {
     text-transform: uppercase;
     font-size: 180%;
     margin: 20px;
+    text-align: center;
 }
 
 // Images
