--- a/css/_material.scss
+++ b/css/_material.scss
@@ -39,13 +39,3 @@ $mq-breakpoint-mobile: 360px;
 .size-100 {
     width: 100%;
 }
-
-// Floating
-
-.float-l {
-  float: left;
-}
-
-.float-r {
-  float: right;
-}
