--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,6 @@
   width: 100%;
 }
 
-.float-l {
-  float: left;
-}
-
-.float-r {
-  float: right;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -60,6 +52,7 @@ h1 {
   text-transform: uppercase;
   font-size: 180%;
   margin: 20px;
+  text-align: center;
 }
 
 img {
@@ -1089,20 +1082,24 @@ footer .copyright {
 }
 
 #about p {
-  margin: 20px;
+  margin: 15px;
+  padding: 10px;
   text-align: justify;
 }
 #about img {
-  width: 450px;
-  border-radius: 8px;
-  margin: 0 20px;
-  margin-bottom: 20px;
-  -o-object-fit: contain;
-     object-fit: contain;
+  max-width: 500px;
+  min-width: 280px;
+  border-radius: 20px;
+  padding: 15px;
 }
-@media screen and (max-width: 360px) {
+@media screen and (min-width: 680px) {
   #about img {
-    width: 100%;
+    float: right;
+  }
+}
+@media screen and (max-width: 679px) {
+  #about img {
+    width: 90%;
     margin: 0 auto;
   }
 }
